--- a/index.html
+++ b/index.html
@@ -4,24 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Clock</title>
 </head>
 <body>
     <main>
         <div class="analog">
+            <div class="toggle">
+                <i class="fa-solid fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
+            </div>
             <div class="number number1">1</div>
             <div class="number number2">2</div>
-            <div class="number number3">3</div>
+            <div class="number number3 big">3</div>
             <div class="number number4">4</div>
             <div class="number number5">5</div>
-            <div class="number number6">6</div>
+            <div class="number number6 big">6</div>
             <div class="number number7">7</div>
             <div class="number number8">8</div>
-            <div class="number number9">9</div>
+            <div class="number number9 big">9</div>
             <div class="number number10">10</div>
             <div class="number number11">11</div>
-            <div class="number number12">12</div>
+            <div class="number number12 big">12</div>
             <div class="hand hour-hand"></div>
             <div class="hand min-hand"></div>
             <div class="hand sec-hand"></div>
